--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Coloring game for kids</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <meta name="google-site-verification" content="Zfcj56GqyW1ct5AltHgZbxtFyZsrJkVhPVkD32WmZZg" />
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta name="description" content="Coloring game: This simple game is a collection of coloring pages for children, developed by Mohcin147">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
