--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Coloring game for kids</title>
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="https://mohcin147.github.io/favicon.png">
+  <meta charset="UTF-8">
   <meta name="google-site-verification" content="Zfcj56GqyW1ct5AltHgZbxtFyZsrJkVhPVkD32WmZZg" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta name="description" content="Coloring game: This simple game is a collection of coloring pages for children, developed by Mohcin147">
